[package]
name = "tokio-proxy"
version = "0.1.0"
authors = ["Gavrie Philipson <gavrie@philipson.co.il>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
futures = "0.3"
